fixed timers and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -355,14 +355,14 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-counter,
 #fh5co-event {
-  height: 850px;
+  height: 1450px;
   float: left;
 }
 #fh5co-counter .display-t,
 #fh5co-counter .display-tc,
 #fh5co-event .display-t,
 #fh5co-event .display-tc {
-  height: 700px;
+  height: 535px;
   display: table;
   width: 100%;
 }
